client/src/component/Accordion/section.scss
.line{
  border-left: 3px solid white;
  margin-left: 6px;
}

.bullet{
  padding: 0px 15px 0px 0px;
  margin-left: -6px;
  font-size: 20px;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Opera and Firefox */
}

